[gd_scene load_steps=7 format=3 uid="uid://c2ue085o0rsuo"]

[ext_resource type="Script" path="res://WorldMap/WorldMap.gd" id="1_rsjsh"]
[ext_resource type="PackedScene" uid="uid://g4b1y4562rt3" path="res://WorldMap/WorldMap_LevelNode.tscn" id="2_ymxpo"]
[ext_resource type="PackedScene" uid="uid://c8oluyypfcuij" path="res://characters/player.tscn" id="3_minih"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3ux2m"]
height = 0.5
radius = 26.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f4xmb"]
albedo_color = Color(0.423529, 0.423529, 0.423529, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_t83sk"]
material = SubResource("StandardMaterial3D_f4xmb")
top_radius = 26.0
bottom_radius = 26.0
height = 0.5

[node name="WorldMap" type="Node3D"]
script = ExtResource("1_rsjsh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 6.014, 7.415)
fov = 96.6

[node name="Level1" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5115, 0, 0)
level_path = "res://levels/level_topdown.tscn"

[node name="Level2" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99146, 0, -6.51151)
world_index = 2

[node name="Level3" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00934124, 0, -9.59675)
world_index = 3

[node name="Level4" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.7645, 0, -6.34972)
world_index = 4

[node name="Level5" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.337, 0, 0.326812)
world_index = 5

[node name="Level6" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.01169, 0, 5.4205)
world_index = 6

[node name="Level7" parent="." instance=ExtResource("2_ymxpo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35888, 0, 0.0428187)
world_index = 7

[node name="Player" parent="." instance=ExtResource("3_minih")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -13.529, 0, 0)

[node name="worldmap_ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="worldmap_ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CylinderShape3D_3ux2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="worldmap_ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("CylinderMesh_t83sk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 8.82513, 11.3192, 13.3976)
